<resources>
    <string name="app_name">Lab2</string>
    <string name="dishes_spinner">Dishes</string>

    <string name="countries_checkbox">Countries</string>
    <string name="checkbox_china">China</string>
    <string name="checkbox_usa">USA</string>
    <string name="checkbox_netherlands">Netherlands</string>
    <string name="checkbox_ukraine">Ukraine</string>
    <string name="checkbox_russia">Russia</string>
    <string name="checkbox_france">France</string>
    <string name="checkbox_spain">Spain</string>
    <string name="checkbox_italy">Italy</string>

    <string name="prices_checkbox">Prices</string>
    <string name="checkbox_500">Less 500</string>
    <string name="checkbox_500_1000">500 - 1000</string>
    <string name="checkbox_1000">More 1000</string>

    <string name="submit">Submit</string>
</resources>
